@@ -1,7 +1,8 @@
 3.1 (2013-05-29)
 New feature: Option to set the number of feed items imported from every feed (default 5)
-New feature: Import and Export aggregator settings
+New feature: Import and Export aggregator settings and feed sources
 New feature: Debugging page allowing manual feed refresh and feed reset
+Enhanced: Faster handling of restoring sources from trash when feed limit is 0
 Fixed bug: Limiter on number of overall feeds stored not working
 Fixed bug: Incompatibility issue with Foobox plugin fixed 
 Fixed bug: Duplicate feeds sometimes imported
